doc/0.39/_sources/index.txt
Admarkt Sellside API
====================

.. note::

    This document is work in progress and will change until its final vrsion
    is released. The History section will describe which changes were made.
    However, the changes should be gradual and the document should give you a
    good idea what the API looks like.

.. _introduction:

Introduction
============

This document describes the Admarkt Sellside API to place ads on Admarkt.

The API is designed as a RESTful API supporting JSON as data formats.
Authentication is provided va OAuth2 to allow simple integration with
existing client libraries.

If you have questions or would like to provide feedback you can send an
email to Admarkt-API@marktplaats.nl.

Contents
========

.. toctree::
   :maxdepth: 2

   overview
   authentication
   ads
   categories
   attributes
   error-handling
   api-reference


History
=======

..  role:: strike

* v0.39 - 20 Nov 2014 - ak

 * :ref:`get_ad`: Added new response type ``application/sellside.ad.list-v2+json`` which includes the total size of the result set matching the filter criteria

* v0.38 - 03 Nov 2014 - ak

 * Removed deprecated :strike:`DELETE /ad/{id}`

* v0.37 - 31 Oct 2014 - ak

 * Added support for :ref:`dryrun_validation` for :ref:`post_ad`, :ref:`put_ad_id` and :ref:`put_ad_id_status`

* v0.36 - 13 Oct 2014 - ak

 * :ref:`get_ad`: Added *remainingBudget* parameter for retrieving ads whose budget is below a certain threshold.

* v0.35 - 30 Sep 2014 - ak

 * Added error code *2017 - ad status change not allowed*

* v0.34 - 23 Sep 2014 - fs

 * Fixed Content-Type header in :ref:`post_ad` and :ref:`put_ad_id` examples

* v0.33 - 10 Sep 2014 - tw, fs

 * :ref:`get_report` fields `cpc`, `dailyBudget`, `totalSpent` and `totalBudget` were factor 10 too high
 * Updated sandbox api and authentication endpoints

* v0.32 - 08 Aug 2014 - fs

 * Enhanced Overview section
 * Updated production authentication endpoint

* v0.31 - 01 Aug 2014 - fs

 * Added *client_secret* as required parameter to token request

* v0.30 - 28 apr 2014 - fs

 * Added note to exclude :ref:`ad_pageNumber` and :ref:`ad_suggestedCpcForPageOne` if they are not required
 * Added note on how to reset the :ref:`ad_dailyBudget`
 * Added note that by default :ref:`get_ad` returns only active ads
 * Fixed typos and links in documentation

* v0.29 - 15 apr 2014 - tw

 * Deprecated :strike:`DELETE /ad/{id}`. Set status to :ref:`ad_status_deleted` with :ref:`put_ad_id_status` before **1 Sep 2014**
 * Added section :ref:`overview_customize_response_body` to :ref:`overview`
 * Added support for `_body` to

  * :ref:`post_ad`
  * :ref:`put_ad_id`

 * Added support for `_include` and `_exclude` to

  * :ref:`get_ad`
  * :ref:`get_ad_id`
  * :ref:`get_category`
  * :ref:`get_category_id`
  * :ref:`get_category_id_attributes`
  * :ref:`get_report`
  * :ref:`post_ad`
  * :ref:`put_ad_id`

* v0.28 - 27 mar 2014 - fs

 * :ref:`put_ad_id_status`: Fixed documentation

* v0.27 - 11 mar 2014 - be

 * Added :ref:`ad_buyItNowEnabled` to Ad
 * Added :ref:`ad_paypalEmail` to Ad
 * Added documentation for *Buy It Now*

* v0.26 - 08 feb 2014 - fs

 * Updated Sandbox URLs
 * Added note on self-signed certificates
 * Added section on token expiration times and policies
 * Removed "refresh" flag for image upload since it isn't implemented yet
 * Moved report documentation into the API reference
 * Removed "/sellside/" from all URLs since base URL may vry
 * Updated to readthedocs.org theme to work better on mobile devices
 * Added note that /report returns only statistics for ads which received at least one event
 * Updated contact email address to Admarkt-API@marktplaats.nl

* v0.25 - 30 jan 2014 - be

 * Added :ref:`get_report`

* v0.24 - 02 dec 2013 - be

 * Removed unused error code *2013 - invalid state*

* v0.23 - 30 oct 2013 - be

 * Added documentation for :ref:`authentication`
 * Updated documentation for :ref:`ad_shippingOptions`

* v0.22 - 24 oct 2013 - be

 * Added :ref:`ad_shippingOptions` to Ad
 * Changed maxLength of :ref:`ad_description` from 1000 to 20000

* v0.21 - 05 jun 2013 - be

 * Added :ref:`ad_pageNumber` to Ad
 * Added :ref:`ad_suggestedCpcForPageOne` to Ad
 * Added *suggestedCpcForPageOne* to Category

* v0.20 - 01 may 2013 - fs

 * Fixed the category attribute examples to use the correct types (STRING, LIST, NUMBER)

* v0.19 - 08 apr 2013 - be

 * Updated status filter part of :ref:`get_ad`
 * Updated :ref:`put_ad_id_example` for :ref:`put_ad_id`
 * Updated the documentation about :ref:`ad_dailyBudget` and :ref:`ad_totalBudget` fields

* v0.18 - 27 mar 2013 - fs

 * :ref:`get_ad`: Added *changedSince* parameter for retrieving updated ads
 * :ref:`get_ad`: Describe procedure for fetching and maintaining a cache of the ads
 * Added error code *2013 - invalid state*

* v0.17 - 6 mar 2013 - fs

 * :ref:`post_ad`, :ref:`put_ad_id`: Return *1006 - Type mismatch* if the value for an integer field is a string or a float
   (:ref:`ad_id`, :ref:`ad_categoryId`, :ref:`ad_cpc`, :ref:`ad_dailyBudget`, :ref:`ad_totalBudget`, :ref:`ad_price`)

* v0.16 - 26 feb 2013 - be, tw

 * Added description for the caller to add the accept header
   *application/json* to be able to receive a 401 token expired / invalid
   error instead of a 406 NOT ACCEPTED.

* v0.15 - 25 feb 2013 - be, tw

 * Updated documentation according to the refactoring of attributes

* v0.14 - 21 feb 2013 - tw

 * Made :ref:`ad_totalBudget` optional again, leaving it empty will mean unlimited budget.
 * Corrected a typo from dailyLimit to :ref:`ad_dailyBudget`

* v0.13 - 18 Oct 2012 - tw

 * Added some explanation on user defined attributes & validation
 * Added error codes for put & post w.r.t. user defined attributes

* v0.12 - 12 Oct 2012 - be

 * Added a new error code to :ref:`get_category_id`

* v0.11 - 10 Oct 2012 - tw

 * :ref:`put_ad_id`: different error code is thrown when supplied with a non-numeric id
 * :strike:`DELETE /ad/{id}`: negative id will use error for out of range instead of invalid id
 * Added error code 2012 to the list of existing error codes and to the error list of :ref:`put_ad_id`
 * Changed titleKeyword to titleKeywords since we allow multiple values, comma separated.

* v0.10 - 8 Oct 2012 - fs, ml

 * :ref:`get_category_id_attributes`: only leaf categories have attributes
 * Added additional user attribute examples
 * Changed *valueType* for *MULTI* category attribute example
 * Changed *name* to *key* in user attribute example

* v0.9 - 5 Oct 2012 - fs

 * Removed dateCreated from image objects

* v0.8 - 4 Oct 2012 - fs

 * Added a section for attributes
 * Added :ref:`get_category_id_attributes`
 * Removed the *media* attribute from ads
 * Updated the handling of images in ads
 * :ref:`post_ad`: Removed all *media* related errors
 * :ref:`post_ad`: Added *image* related errors 2002 and 2006
 * :ref:`put_ad_id`: Updated handling of images

* v0.7 - 1 Oct 2012 - tw

 * :ref:`get_ad`: Added sorting
 * :ref:`get_ad`: Added status filtering
 * :ref:`get_ad`: Updated response documentation

* v0.6 - 27 Sep 2012 - fs

 * Removed XML as supported format

* v0.5 - 24 Sep 2012 - fs, ml

 * Added constraint and error specification for price greater than zero in POST
 * Added link to ISO 4217 currency code to the category
 * Added :ref:`ad_postcode` attribute to ad
 * Added status attribute to ad
 * Changed: :ref:`ad_postcode` is optional
 * Changed date format to ISO 8601
 * Updated description of the :ref:`ad_externalId` field for an ad

* v0.4 - 13 Sep 2012 - fs

 * Added :ref:`ad_currency` attribute to ad
 * Added currency attribute to category
 * Added canPlaceAds to the category
 * Added minDailyBudget to the category
 * Added maxNumberOfActiveAds to the category
 * Moved the category examples to the category page
 * :ref:`post_ad`: Added comment on the maxNumberOfActiveAds for the category
 * :ref:`post_ad`: Made :ref:`ad_cpc` and :ref:`ad_totalBudget` mandatory fields
 * :ref:`post_ad`: Removed media - 2009 error for image dimension check
 * :ref:`post_ad`: Changed :ref:`ad_sellerName` - 2004 error to sellerName - 2000 since it is a mandatory field

* v0.3 - 11 Sep 2012 - fs

 * Added description for :ref:`price_types`
 * Removed /pricetype links

* v0.2 - 11 Sep 2012 - fs

 * Added :ref:`ad_dateCreated`
 * Added :ref:`ad_dateLastUpdated`
 * Added :ref:`ad_dateDeleted`
 * Added :ref:`ad_spentBudget`
 * Added :ref:`price_types`
 * Added :ref:`ad_status_overview`
 * Updated :ref:`error_codes`
 * Updated :ref:`ads`
 * Updated :ref:`categories`
 * Updated :ref:`attributes`

* v0.1 - 15 Jun 2012 - bk, fs

 * Initial draft

Indices and tables
==================

* :ref:`genindex`
* :ref:`search`

